# -my-harness

./: .env.example  .gitignore  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml
docs/: packaging.md
my_harness/: __init__.py  agent.py  config.py  llm.py  main.py  session.py
my_harness/prompts/: __init__.py  loader.py  prompt.md  system.md
my_harness/providers/: __init__.py  base.py  factory.py  google_provider.py  openai_provider.py  openrouter_provider.py
my_harness/skills/: __init__.py  loader.py  subagents.md
my_harness/tools/: __init__.py  base.py  runner.py
my_harness/tools/filesystem/: __init__.py  read_file.py  write_file.py
my_harness/tools/shell/: bash.py
my_harness/tools/subagents/: __init__.py  create_subagent.py
